--- a/personal/src/components/Header.module.scss
+++ b/personal/src/components/Header.module.scss
@@ -116,7 +116,7 @@
             }
 
             &.isMenu{
-                transform: translate(100%);
+                transform: translate(100%, 0%);
             }
         }
 
