--- a/personal/src/Styles/About.scss
+++ b/personal/src/Styles/About.scss
@@ -9,8 +9,8 @@
 }
 
 .title{
-    font-size: 75px;
-    line-height: 90px;
+    font-size: 5rem;
+    //line-height: 90px;
     text-align: center;
     color: #fff;
     padding-top: 180px;
