--- a/personal/src/components/Header.module.scss
+++ b/personal/src/components/Header.module.scss
@@ -7,6 +7,7 @@
     width: 100%;
     height: $headerHeightMobile;
     padding: 0 1.5rem;
+    z-index: 999;
     &.scroller{
         background: none;
         box-shadow: none;
