--- a/personal/src/components/Header/Header.module.scss
+++ b/personal/src/components/Header/Header.module.scss
@@ -2,6 +2,8 @@
 
 .header{
     position: fixed;
+    top: 0;
+    left: 0;
     background: $light;
     box-shadow: 0 4px 4px rgba(0, 0, 0, 0.4);
     width: 100%;
