--- a/personal/src/components/WelcomeSection/Welcome.module.scss
+++ b/personal/src/components/WelcomeSection/Welcome.module.scss
@@ -15,15 +15,22 @@
     }
 
     &__title{
-        font-size: 2rem;
         color: $light;
-        line-height: 48px;
-        padding-top: 70px;
+        padding-top: 100px;
+        
         @include breakpoint(md) {
-            font-size: 8rem;
-            line-height: 170px;
-            padding-top: 200px;
+            padding-top: 300px;
         }
+        h1{
+            font-size: 2rem;
+            line-height: 48px;
+            
+            @include breakpoint(md) {
+                font-size: 6rem;
+                line-height: 170px;
+            }
+        }
+        
 
         span{
             cursor: pointer;
